# HTTPay

./: .gitignore  Cargo.toml  LICENSE.md  README.md  blueprint.md  notes.md  package.json  presentation-pt.md  presentation.md  project.md  prompting.md  tasks.md  vercel.json
.github/: copilot-instructions.md
.github/prompts/: fix-test.prompt.md  take-notes.prompt.md
artifacts/: checksums.txt  checksums_intermediate.txt
contracts/escrow/: Cargo.toml  NOTICE
contracts/escrow/src/: contract.rs  error.rs  helpers.rs  lib.rs  msg.rs  registry_interface.rs  state.rs
contracts/escrow/src/tests/: complete_flow_test.rs  exceed_max_ttl_test.rs  excessive_fee_test.rs  expired_escrow_refund_test.rs  fee_collection_test.rs  frozen_contract_test.rs  (+9 more)
contracts/registry/: Cargo.toml
contracts/registry/src/: contract.rs  error.rs  msg.rs  state.rs
frontend/: README.md
notes/: architecture.md  client-auth-update.md  cosmjs-downgrade-fixes.md  deployment.md  description-field-update.md  endpoint-field-implementation.md  endpoint-field-plan.md  fee-collection-feature.md  fetch-escrows-implementation.md  fetch-escrows-plan.md  frontend-debug-page.md  get-tools-query-update.md  index.md  multidenom-prd-tdd.md  multidenom-support.md  phase1-chunk1.md  phase1-chunk2.md  phase1-chunk3.md  phase1-chunk4.md  phase1-chunk5.md  phase2-chunk1.md  phase3-chunk1.md  phase4-chunk1.md  phase5-chunk1.md  sdk-abstractions-enhancement.md  sdk-v2-migration.md  sdk-v2-refactoring.md  vercel-deployment.md
scripts/: deploy.sh  deployment-20250531-173306.json  deployment-20250531-211708.json
(+16 files in other folders)
